--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,9 +19,19 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url "http://p2pkit.io/maven2"
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':libs:java-figo')
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:design:22.2.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.google.android.gms:play-services:7.5.0'
+    compile 'ch.uepaa.p2p:p2pkit-android:1.0.3'
 }
